# RaspberryPi

./: .main.cpp.swp  CMakeLists.txt  ESC.cpp  ESC.h  LDR.cpp  LDR.h  MPU9250.cpp  MPU9250.h  Makefile  PCB.txt  a.out  init.cpp  init.h  main.cpp  solarControl.cpp  solarControl.h  userInputManager.cpp  userInputManager.h
include/: flightControl.h  init.h
src/: flightControl.cpp  init.cpp  userInputManager.cpp
